--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,7 @@ dist-ssr
 *.local
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
+
 .idea
 .DS_Store
 *.suo
@@ -24,3 +23,4 @@ dist-ssr
 *.sw?
 
 package-lock.json
+dist
